completed my_observations controller test case
